avance un poquito con el EJ2

--- a/TP1/Trabajo Practico 1 - Aprendizaje Automatico.ipynb
+++ b/TP1/Trabajo Practico 1 - Aprendizaje Automatico.ipynb
@@ -44,8 +44,7 @@
      "source": [
       "## 1) \u00c1rboles de Decisi\u00f3n. Sobreajuste y ruido\n",
       "Se puede encontrar la secci\u00f3n que corresponde al primer ejercicio en el siguiente notebook:\n",
-      "<a href=\"Ej1/ejerTrees-cars.ipynb\"> Ejercicio 1 - \u00c1rboles de Decisi\u00f3n. Sobreajuste y ruido </a><br>\n",
-      "Probando links: [Ej1](Ej1/ejerTrees-cars.ipynb)\n"
+      "[Ejercicio 1: \u00c1rboles de Decisi\u00f3n. Sobreajuste y ruido](Ej1.ipynb)"
      ]
     },
     {
@@ -54,7 +53,7 @@
      "source": [
       "## 2) Vecinos M\u00e1s Cercanos. Sobreajuste y curse of dimensionality \n",
       "Se puede encontrar la secci\u00f3n que corresponde al segundo ejercicio en el siguiente notebook:\n",
-      "<a href=\"Ej2/kNN-diabetes.ipynb\"> Ejercicio 2 - Vecinos M\u00e1s Cercanos. Sobreajuste y curse of dimensionality </a>"
+      "[Ejercicio 2 - Vecinos M\u00e1s Cercanos. Sobreajuste y curse of dimensionality](Ej2.ipynb)"
      ]
     },
     {
