--- a/TP1/Trabajo Practico 1 - Aprendizaje Automatico.ipynb
+++ b/TP1/Trabajo Practico 1 - Aprendizaje Automatico.ipynb
@@ -21,16 +21,6 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {
-      "collapsed": true
-     },
-     "source": [
-      "## Indice \n",
-      "TODO: agregar tabla de indice"
-     ]
-    },
-    {
-     "cell_type": "markdown",
      "metadata": {},
      "source": [
       "## Introducci\u00f3n\n",
@@ -82,25 +72,43 @@
      "metadata": {},
      "source": [
       "## Conclusiones\n",
-      "TODO: Conclusiones \"Por   tratarse   de   un   trabajo   de   investigaci\u00f3n   netamente   pr\u00e1ctico,   las   conclusiones   deben   ser   la  \n",
-      "resultante   de   la   elaboraci\u00f3n   de   las   pruebas   realizadas.   La   informaci\u00f3n   obtenida   de   referencias  \n",
-      "externas puede y debe ser tomada como insumo, pero nunca como conclusi\u00f3n. \""
+      "\n",
+      "En este trabajo se probaron diferentes algoritmos de aprendizaje para el problema de clasificaci\u00f3n. En particular, \u00c1rboles de Decisi\u00f3n, Vecinos M\u00e1s Cercanos y Naive Bayes. Aqu\u00ed se exponen conclusiones generales, no obstante, en cada ejercicio se realizan consideraciones particulares y se ofrecen mayores detalles.\n",
+      "\n",
+      "En el caso de los \u00e1rboles de decisi\u00f3n, la performance general es muy buena (> 0.9). Sin embargo, la construcci\u00f3n de un \u00e1rbol completo lleva a problemas de sobreajuste por lo que el control del crecimiento del mismos es \u00fatil para permitir mayor poder de generalizaci\u00f3n. Esto se evidenci\u00f3n al introducir observaciones perturbadas en los datos.\n",
+      "\n",
+      "El enfoque por vecinos mas cercanos logr\u00f3 clasificar correctamente el 80% de nuevas observaciones. La cuesti\u00f3n con este enfoque es el ajuste del tama\u00f1o de la vecindad (y las funciones de peso para las distancias). El agregado de 'features' con valores aleatorios muestra c\u00f3mo se degrada la performance al crecer el espacio de dimensiones considerado.\n",
+      "\n",
+      "Finalmente, el clasificador de noticias utilizando el modelo Naive Bayes obtiene muy buenas prestaciones cuando se cuenta con clases que poseen suficientes datos de entrenamiento, lo que le permite extraer mayor cantidad de t\u00e9rminos representativos de \u00e9stas. Las estrategias de reducci\u00f3n del vocabulario, en general, suben la exhaustividad de la recuperaci\u00f3n, degradando la precisi\u00f3n."
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Ideas   para   futuras   investigaciones\n",
-      "TODO"
+      "## Ideas para Trabajos Futuros\n",
+      "\n",
+      "En todos los casos, existen m\u00faltiples diversos par\u00e1metros a considerar para hacer el ajuste fino del clasificador. En general, se trata de una tarea experimental y dependiente del problema. Para el caso de los \u00e1rboles, una comparaci\u00f3n entre las estrategias de controlar la cantidad m\u00e1xima de hojas, la profundidad del \u00e1rbol o la cantidad m\u00ednima de \u00edtems en las hojas puede resultar interesante a los efectos de intentar obtener alguna regla a aplicar en diferentes problemas.\n",
+      "\n",
+      "Por el lado de los vecinos mas cercanos, el estudio de las funciones de peso de la incidencia de los vecinos es igual de inter\u00e9s. De igual manera, se podr\u00eda estudiar el tradeoff entre dimensionalidad y cantidad de observaciones necesarias para obtener buenas prestaciones en el caso propuesto.\n",
+      "\n",
+      "Para el caso del clasificador de noticias, un estudio interesante consiste en tratar de determinar el m\u00ednimo conjunto de 'features' para un problema dado que permita realizar, por ejemplo, tareas de clasificaci\u00f3n sobre flujos en tiempo real."
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Referencias\n",
-      "TODO"
+      "Referencias\n",
+      "-----------\n",
+      "<ul>\n",
+      "<li>Manning, C.D.; Raghavan P. and Schuetze, H. Introduction to Information Retrieval. Cambridge University Press. 2008.\n",
+      "<li>Marsland, S. Machine Learning: An Algorithmic Perspective. 2nd. Edition. Chapman & Hall/Crc Machine Learning & Pattern Recognition. 2014.\n",
+      "<li>McCallum A. and Nigam, K. A comparison of event models for naive Bayes text classification. Proc. AAAI/ICML-98 Workshop on Learning for Text Categorization. 1998\n",
+      "<li> Metsis, V; Androutsopoulos, I and Paliouras, G. Spam filtering with naive Bayes -- Which naive Bayes? 3rd Conf. on Email and Anti-Spam (CEAS). 2006.\n",
+      "<li>Mitchell, T. M. Machine learning. WCB. 1997.\n",
+      "<li>Shakhnarovich, G.; Indyk, P.; and Darrell, T. Nearest-neighbor methods in learning and vision: theory and practice. The MIT Press. 2006.\n",
+      "</ul>"
      ]
     }
    ],
