--- a/TP2/Informe/Cap4.ipynb
+++ b/TP2/Informe/Cap4.ipynb
@@ -415,8 +415,7 @@
      "source": [
       "<h3>Persistencia del Modelo Entrenado</h3>\n",
       "\n",
-      "\n",
-      "Como se mencion\u00f3 en el cap\u00edtulo anDado que el proceso de extracci\u00f3n de atributos y el entrenamiento con el n\u00famero de instancias consideradas puede requerir un tiempo de procesamiento largo, existe la posibilidad de salvar el modelo para su posterior uso. Esto se realiza de forma simple con la librer\u00eda 'joblib' de SK-Learn externals."
+      "Como se mencion\u00f3 en el cap\u00edtulo anterior y dado que el proceso de extracci\u00f3n de atributos y el entrenamiento con el n\u00famero de instancias consideradas requiere un tiempo de procesamiento largo, se salva el modelo para su posterior uso. En este caso, usando la librer\u00eda 'joblib' de SK-Learn externals."
      ]
     },
     {
