--- a/TP2/Informe/Cap4.ipynb
+++ b/TP2/Informe/Cap4.ipynb
@@ -381,11 +381,13 @@
       "clf3 = linear_model.LogisticRegression(C=0.0005, penalty='l2')\t\n",
       "\n",
       "eclf1 = VotingClassifier(estimators=[('rf', clf1), ('gb', clf2), ('lr', clf3)], voting='hard')\n",
-      "\n",
       "eclf1 = eclf1.fit(X_data, Y_data)\n",
+      "\n",
+      "scores = cross_validation.cross_val_score(eclf1, X_data, Y_data, cv=5, scoring='precision')\n",
       "\n",
       "predictions = eclf1.predict(x_data)\n",
       "\n",
+      "print scores\n",
       "print classification_report(y_data, predictions)"
      ],
      "language": "python",
@@ -398,16 +400,85 @@
      "metadata": {},
      "source": [
       "<h3>Performance</h3>\n",
-      "TBC"
+      "Se evaluaron diferentes combinaciones de atributos utilizando los mejores par\u00e1metros estimados en la b\u00faqueda con grid_search. En cuanto al esquema de votaci\u00f3n, el esquema 'hard' funciona mejor (aqu\u00ed se usa la clase estrictamente estimada mientras que en el esquema 'soft' se computa el argmax de la suma de las probabilidades estimadas). No se utilizan esquemas de peso para los clasificadores (este es un posible trabajo futuro). El test de performance se realiza tomando el 70% del dataset para entrenamiento y el resto para la prueba, utilizando cross-validation.\n",
+      "\n",
+      "Como m\u00e9tricas de evaluaci\u00f3n se calcularon Precision, Recall, F1-score. Tambi\u00e9n se ofrece la matriz de confusi\u00f3n, cuya estructura es la siguiente:\n",
+      "\n",
+      "<pre>    \n",
+      "           Clase Predicha\n",
+      "             ---------\n",
+      "             | 0 | 1 |\n",
+      "         -------------     \n",
+      "Clase    | 0 |TN |FP |\n",
+      "         -------------\n",
+      "Verdadera| 1 |FN |TP |\n",
+      "         -------------\n",
+      "</pre>\n",
+      "\n",
+      "\n",
+      "Luego, definiendo los siguientes atributos como:<br>\n",
+      "F1 = Histograma de color<br>\n",
+      "F2 = Histograma de grises<br>\n",
+      "F3 = Atributos Haraclick<br>\n",
+      "F4 = Histograma de LBP<br>\n",
+      "F5 = Histograma de SURF<br>\n",
+      "\n",
+      "las combinaciones que mejor performace ofrecen son:<br>\n",
+      "\n",
+      "Caso 1: $F1 \\cup F4 \\cup F5$\n",
+      "\n",
+      "<pre>\n",
+      "               precision    recall  f1-score   support\n",
+      "          --------------------------------------------\n",
+      "          0       0.74      0.75      0.74      3716\n",
+      "          1       0.75      0.74      0.75      3770\n",
+      "\n",
+      "<b>avg / total       0.74      0.74      0.74      7486</b>\n",
+      "</pre>\n",
+      "\n",
+      "\n",
+      "Y la matriz de confusi\u00f3n resulta:\n",
+      "\n",
+      "<pre>\n",
+      "             Clase Predicha\n",
+      "             --------------\n",
+      "             |  0  |   1  |\n",
+      "         ------------------     \n",
+      "Clase    | 0 |2769 |  947 |\n",
+      "         ------------------\n",
+      "Verdadera| 1 | 964 | 2806 |\n",
+      "         ------------------\n",
+      "</pre>\n",
+      "\n",
+      "\n",
+      "\n",
+      "Caso 2: $F1 \\cup F2 \\cup F3 \\cup F4 \\cup F5$\n",
+      "\n",
+      "<pre>\n",
+      "\n",
+      "             precision    recall  f1-score   support\n",
+      "          --------------------------------------------\n",
+      "          0       0.76      0.74      0.75      3716\n",
+      "          1       0.75      0.77      0.76      3770\n",
+      "<b>avg / total       0.75      0.75      0.75      7486</b>\n",
+      "</pre>\n",
+      "\n",
+      "\n",
+      "Y la matriz de confusi\u00f3n resulta:\n",
+      "\n",
+      "<pre>\n",
+      "             Clase Predicha\n",
+      "             --------------\n",
+      "             |  0  |   1  |\n",
+      "         ------------------     \n",
+      "Clase    | 0 |2747 |  969 |\n",
+      "         ------------------\n",
+      "Verdadera| 1 | 874 | 2896 |\n",
+      "         ------------------\n",
+      "</pre>\n",
+      "\n",
+      "El uso de todos los atributos no mejora la performance sustancialmente (aunque aumenta el tiempo de entrenamiento). Una observaci\u00f3n interesante es que todas las combinaciones que obtuvieron Precision por encima del 70% utilizan los atributos SURF, que ofrecen ese umbral. Con el resto, parecer\u00eda mejorar levemente este piso."
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -453,7 +524,7 @@
      "metadata": {},
      "source": [
       "<h3>Discusi\u00f3n</h3>\n",
-      "En este cap\u00edtulo se han presentado la soluci\u00f3n propuesta para la clasificaci\u00f3n de nuevas instancia a partir de la extracci\u00f3n de atributos basados en color y textura. Los mismos, luego fueron combinados en un \u00fanico vector de caracter\u00edsticas y se entren\u00f3 un ensamble con tres clasificadores diferentes que definen la clase final mediante un esquema de votaci\u00f3n. "
+      "En este cap\u00edtulo se han presentado la soluci\u00f3n propuesta para la clasificaci\u00f3n de nuevas instancia a partir de la extracci\u00f3n de atributos basados en color y textura. Los mismos, luego fueron combinados en un \u00fanico vector de caracter\u00edsticas y se entren\u00f3 un ensamble con tres clasificadores diferentes que definen la clase final mediante un esquema de votaci\u00f3n. La mayor precisi\u00f3n alcanzada es del 75%, combinando todos los grupos de atributos. Como observaci\u00f3n interesante, se hall\u00f3 que los atributos SURF ofrecen la mejor performance permitiendo superar el 70% y mejorando levemente con el agregado de los dem\u00e1s atributos."
      ]
     }
    ],
