pequeños cambios en la caratula y Cap1

--- a/TP2/Informe/Cap1.ipynb
+++ b/TP2/Informe/Cap1.ipynb
@@ -358,7 +358,7 @@
      "metadata": {},
      "source": [
       "<h3>Discusi\u00f3n</h3>\n",
-      "En esta secci\u00f3n se describieron algunas de las t\u00e9cnicas utilizadas para extraer atributos de im\u00e1genes. Se intent\u00f3 abarcar tanto aquellas relacionadas con el valor de los colores de los p\u00edxeles como la detecci\u00f3n de texturas (locales y globales). Tambi\u00e9n, se analiz\u00f3 el impacto de aplicar t\u00e9cnicas de reducci\u00f3n de dimensionalidad y normalizaci\u00f3n de los vectores de atributos. En el cap\u00edtulo 4 se muestra c\u00f3mo se utilizan estos atributos para el proceso de clasificaci\u00f3n."
+      "En esta secci\u00f3n se describieron algunas de las t\u00e9cnicas utilizadas para extraer atributos de im\u00e1genes. Se intent\u00f3 abarcar tanto aquellas relacionadas con el valor de los colores de los p\u00edxeles como la detecci\u00f3n de texturas (locales y globales). Tambi\u00e9n, se analiz\u00f3 el impacto de aplicar t\u00e9cnicas de reducci\u00f3n de dimensionalidad y normalizaci\u00f3n de los vectores de atributos. En el siguiente capitulo se muestra el uso de estos atributos para el entranamiento de diferentes clasificadores. En el cap\u00edtulo 4 se muestra c\u00f3mo se utilizan estos atributos para el proceso de clasificaci\u00f3n de nuevas instancias."
      ]
     }
    ],
