--- a/TP2/Informe/Trabajo Practico 2 - aa2015.ipynb
+++ b/TP2/Informe/Trabajo Practico 2 - aa2015.ipynb
@@ -34,7 +34,9 @@
       "\n",
       "En este trabajo se aborda el problema de construir un clasificador de im\u00e1genes que debe ser entrenado con un conjunto de instancias de las cuales se deben seleccionar atributos adecuados. Luego, a partir de diferentes estrategias de clasificaci\u00f3n, se construye en ensamble que permite mejorar la calidad de la predicci\u00f3n.\n",
       "\n",
-      "Para ello, se extraen dos grupos de atributos (basados en color y en textura) y se someten a pruebas con diferentes algoritmos de clasificacion con un exhaustivo barrido por el espacio de par\u00e1metros. El trabajo se organiza de la siguiente manera: en la siguiente secci\u00f3n se describe la arquitectura general de la soluci\u00f3n. A continuaci\u00f3n, se dedican 4 cap\u00edtulos a presentar detalladamente los siguientes aspectos: 1) Extraccion de atributos, 2)Testing de clasificadores, 3) Elecci\u00f3n por voto y persistencia de modelos, 4) Clasificacion de nuevas instancias. Finalmente, se enuncian conclusiones y posibles trabajos futuros."
+      "Para ello, se extraen dos grupos de atributos (basados en color y en textura) y se someten a pruebas con diferentes algoritmos de clasificacion con un exhaustivo barrido por el espacio de par\u00e1metros. El trabajo se organiza de la siguiente manera: en la siguiente secci\u00f3n se describe la arquitectura general de la soluci\u00f3n. A continuaci\u00f3n, se dedican 4 cap\u00edtulos a presentar detalladamente los siguientes aspectos: 1) Extraccion de atributos, 2)Testing de clasificadores, 3) Elecci\u00f3n por voto y persistencia de modelos, 4) Clasificacion de nuevas instancias. Finalmente, se enuncian conclusiones y posibles trabajos futuros.\n",
+      "\n",
+      "Como se muestra en el cap\u00edtulo final, las pruebas con cross-validation utilizando el mejor clasificador encontrado nos da una presici\u00f3n cercana al 74%."
      ]
     },
     {
@@ -45,9 +47,9 @@
       "\n",
       "La soluci\u00f3n propuesta presenta varios desaf\u00edos. En primer lugar, la selecci\u00f3n de atributos acordes con el problema y el tipo de instancias a tratar. Como el conjunto de entranamiento es de tama\u00f1o moderado, se pretende almacenar de forma permanente los conjuntos de atributos obtenidos. \n",
       "\n",
-      "Luego, una b\u00fasqueda amplia sobre un conjunto de clasificadores y un espacio de par\u00e1metros permite obtener aquellos que brinden la mejor performance. El proceso de entrenamiento tambi\u00e9n es relativamente costoso por lo que se pretende almacenarlo para su posterior uso.\n",
+      "Luego, comienza la tarea de encontrar cu\u00e1les son los clasificadores que mejor describen el problema. Existen una gran cantidad de clasificadores y cada uno de ellos debe ser parametrizado. Por lo tanto se realiza una amplica b\u00fasqueda sobre un conjunto de clasificadores y un espacio de par\u00e1metros que permite obtener aquellos que brinden la mejor performance. El proceso de entrenamiento tambi\u00e9n es relativamente costoso por lo que se pretende almacenarlo para su posterior uso.\n",
       "\n",
-      "Toda la arquitectura est\u00e1 organizada en forma de pipeline, desde la extracci\u00f3n de atributos hasta el testeo de los modelos. La figura siguiente resume la idea general.\n",
+      "Toda la arquitectura est\u00e1 organizada en forma de pipeline, desde la extracci\u00f3n de atributos hasta el testeo de los modelos. La figura siguiente resume la idea general y muestra los archivo python utilizados en cada caso.\n",
       "\n",
       "<img src=\"files/img/Processo.png\" />"
      ]
