--- a/TP2/Informe/Trabajo Practico 2 - aa2015.ipynb
+++ b/TP2/Informe/Trabajo Practico 2 - aa2015.ipynb
@@ -34,7 +34,7 @@
       "\n",
       "En este trabajo se aborda el problema de construir un clasificador de im\u00e1genes que debe ser entrenado con un conjunto de instancias de las cuales se deben seleccionar atributos adecuados. Luego, a partir de diferentes estrategias de clasificaci\u00f3n, se construye en ensamble que permite mejorar la calidad de la predicci\u00f3n.\n",
       "\n",
-      "Para ello, se extraen dos grupos de atributos (basados en color y en textura) y se someten a pruebas con diferentes algoritmos de clasificacion con un exhaustivo barrido por el espacio de par\u00e1metros. El trabajo se organiza de la siguiente manera: en la siguiente secci\u00f3n se describe la arquitectura general de la soluci\u00f3n. A continuaci\u00f3n, se dedican 4 cap\u00edtulos a presentar detalladamente los siguientes aspectos: 1) Extraccion de atributos, 2)Testing de clasificadores, 3) Elecci\u00f3n por voto y persistencia de modelos, 4) Clasificacion de nuevas instancias. Finalmente, se enuncian conclusiones y posibles trabajos futuros.\n",
+      "Para ello, se extraen dos grupos de atributos (basados en color y en textura) y se someten a pruebas con diferentes algoritmos de clasificacion con un exhaustivo barrido por el espacio de par\u00e1metros. El trabajo se organiza de la siguiente manera: en la siguiente secci\u00f3n se describe la arquitectura general de la soluci\u00f3n. A continuaci\u00f3n, se dedican 4 cap\u00edtulos a presentar detalladamente los siguientes aspectos: 1) Extraccion de atributos, 2) Busqueda y Testing de clasificadores, 3) Elecci\u00f3n por voto y persistencia de modelos, 4) Clasificacion de nuevas instancias. Finalmente, se enuncian conclusiones y posibles trabajos futuros.\n",
       "\n",
       "Como se muestra en el cap\u00edtulo final, las pruebas con cross-validation utilizando el mejor clasificador encontrado nos da una presici\u00f3n cercana al 74%."
      ]
@@ -67,9 +67,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## 2) Testing de Clasificadores \n",
+      "## 2) Busqueda y Testing de Clasificadores \n",
       "Se puede encontrar la secci\u00f3n que corresponde al segundo cap\u00edtulo en el siguiente notebook:\n",
-      "[Cap\u00edtulo 2 - Testing de clasificadores](Cap2.ipynb)"
+      "[Cap\u00edtulo 2 - Busqueda y Testing de clasificadores](Cap2.ipynb)"
      ]
     },
     {
